--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,9 @@
             {# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> #}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css">
 
         {% endblock %}
     </head>
@@ -40,7 +43,7 @@
                             <a class="nav-link" href="/show/listeStagiaires">Stagiaires</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/booking/calendar">Planigramme</a>
+                            <a class="nav-link" href="/show/calendar">Planigramme</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/login">Connexion</a>
