--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,12 +45,17 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/show/calendar">Planigramme</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/login">Connexion</a>
-                        </li>
+                        {% if is_granted('ROLE_USER') %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{path('app_logout')}}">Déconnexion</a>
+                            </li>
+                        {% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
                                 <a class="nav-link" href="/register">Ajouter quelqu'un</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('user_get_all') }}">Utilisateurs</a>
                             </li>
                         {% endif %}
 
