--- a/templates/add_edit/addEditFormation.html.twig
+++ b/templates/add_edit/addEditFormation.html.twig
@@ -10,16 +10,11 @@
     {{form_row(form.dateFin) }}
 
     <ul id="durees" data-prototype="{{ form_row(form.dureeModules.vars.prototype)|e('html_attr') }}">
-
-
-
-
-
-
-
-
-
-
+        {% for duree in form.dureeModules %}
+            <li>
+                {{ form_row(duree) }}
+            </li>
+        {% endfor %}
 
     </ul>
 
