--- a/templates/show/infoStagiaireFormateur.html.twig
+++ b/templates/show/infoStagiaireFormateur.html.twig
@@ -12,35 +12,83 @@
 
     {% endif %}
 
-    <p>Sexe : {{ personne.sexe }}<p>
-    <p>Date de naissance : {{ personne.dateNaissance | date("d/m/Y") }}<p>
-    {% if personne.ville %}
-        <p>Ville : {{ personne.ville }}<p>
-    {% endif %}
-    <p>Courriel : {{ personne.email }}<p>
-    <p>Téléphone : {{ personne.telephone }}<p>
+    <table class="table table-striped table-warning">
+        <thead>
+            <tr>
+                <th scope="col">Prénom</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Sexe</th>
+                <th scope="col">Date de naissance</th>
+                <th scope="col">Ville</th>
+                <th scope="col">Email</th>
+                <th scope="col">Téléphone</th>
+                <th scope="col">Modifier</th>
+                <th scope="col">Supprimer</th>
+            </tr>
+        </thead>
+        
+        <tbody>
+            <tr>
+				<td scope="col">{{ personne.prenom }}</td>
+				<td scope="col">{{ personne.nom }}</td>
+				<td scope="col">{{ personne.sexe }}</td>
+				<td scope="col">{{ personne.dateNaissance | date("d/m/Y") }}</td>
+				<td scope="col">{{ personne.ville }}</td>
+				<td scope="col">{{ personne.email }}</td>
+				<td scope="col">{{ personne.telephone }}</td>
+                <td><a href="{{ path('editFormateur',{'id':personne.id}) }}"><i class="fas fa-edit"></i></a></td>
+                <td><a href="{{ path('deleteFormateur',{'id':personne.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
+            </tr>
+        </tbody>
+    </table>
 
     {% if stagiaire is defined %}
 
-    <p>Listes des formations :</p>
-        {% for formation in stagiaire.formations %}
-            {% if formation.dateFin < date() %}
-                <p><a href="{{ path('showInfoSession',{'id':formation.id}) }}">{{ formation ~ ' (terminée le ' ~ formation.dateFin | date("d/m/Y") ~ ') ' }}</a><a href=" {{ path("createPdf", { "id": personne.id, "id_formation" : formation.id } ) }}  " ><button type="button" class="btn btn-warning" >Obtenir le diplôme en PDF</button></a></p>
-            {% else %}
-                
-                <p><a href="{{ path('showInfoSession',{'id':formation.id}) }}">{{ formation ~ ' (Du ' ~ formation.dateDebut | date("d/m/Y") ~ ' au ' ~ formation.dateFin | date("d/m/Y") ~ ') ' }}</a></p>
-            {% endif %}
-
-        {% endfor %}
-
+        <h2>Listes des formations :</h2>
+        <table class="table table-striped table-warning">
+            <thead>
+                <tr>
+                    <th scope="col">Formations</th>
+                </tr>
+            </thead>
             
+            <tbody>
+                {% for formation in stagiaire.formations %}
+                    {% if formation.dateFin < date() %}
+                        <tr>
+                            <td><a href="{{ path('showInfoSession',{'id':formation.id}) }}"><strong>{{ formation }}</strong> {{ ' (Du ' ~ formation.dateDebut | date("d/m/Y") ~ ' au ' ~ formation.dateFin | date("d/m/Y") ~ ') ' }}</a></td>
+                        </tr>
+                        
+                    {% else %}
+                        <tr>
+                            <td><a href="{{ path('showInfoSession',{'id':formation.id}) }}"><strong>{{ formation }}</strong> {{ ' (terminée le ' ~ formation.dateFin | date("d/m/Y") ~ ') ' }}</a><a href=" {{ path("createPdf", { "id": personne.id, "id_formation" : formation.id } ) }}  " ><button type="button" class="btn btn-warning" >Obtenir le diplôme en PDF</button></a></td>
+                        </tr>
+                    {% endif %}
+                {% endfor %}
+            </tbody>
+        </table>
+
     {% else %}
 
-    <p>Listes des catégories :</p>
-    {% for categorie in formateur.categories %}
-        <p>{{ categorie }}</p>
+        <h2>Listes des catégories :</h2>
+        <table class="table table-striped table-warning">
+            <thead>
+                <tr>
+                    <th scope="col">Catégories</th>
+                </tr>
+            </thead>
+            
+            <tbody>
 
-    {% endfor %}
+                {% for categorie in formateur.categories %}
+                                
+                <tr>
+                    <td>{{ categorie }}</td>
+                </tr>
+
+                {% endfor %}
+            </tbody>
+        </table>
 
     {% endif %}
 
