--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -3,6 +3,11 @@ h1{
     text-align: center;
 }
 
+h2{
+    color:chocolate;
+    font-size: 1.4em;
+}
+
 a{
     text-decoration: none;
     color: chocolate;
