--- a/templates/add_edit/addEditFormation.html.twig
+++ b/templates/add_edit/addEditFormation.html.twig
@@ -3,42 +3,43 @@
 {% block body %}
    {{ form_start(form) }}
 
+        {{form_row(form.nom) }} 
+        {{form_row(form.nbPlaces) }}
+        {{form_row(form.dateDebut) }}
+        {{form_row(form.dateFin) }}
 
-    {{form_row(form.nom) }} 
-    {{form_row(form.nbPlaces) }}
-    {{form_row(form.dateDebut) }}
-    {{form_row(form.dateFin) }}
-
-    <ul id="durees" data-prototype="{{ form_row(form.dureeModules.vars.prototype)|e('html_attr') }}">
-        {% for duree in form.dureeModules %}
-            <li>
-                {{ form_row(duree) }}
-            </li>
-        {% endfor %}
-
-    </ul>
-
-    {% if editMode %}
-        <ul id="stagiaires" data-prototype= "{{ form_row(form.stagiaires.vars.prototype)|e('html_attr') }}">
-
-            {% for stagiaire in form.stagiaires %}
+        <ul id="durees" data-prototype="{{ form_row(form.dureeModules.vars.prototype)|e('html_attr') }}">
+        
+            {% for duree in form.dureeModules %}
                 <li>
-                    {{ form_row(stagiaire) }}
+                    {{ form_row(duree) }}
                 </li>
             {% endfor %}
 
         </ul>
-    {% endif %}
- 
-    {{form_row(form.submit) }} 
-{{ form_end(form) }} 
 
+        {% if editMode %}
+            <ul id="stagiaires" data-prototype= "{{ form_row(form.stagiaires.vars.prototype)|e('html_attr') }}">
+
+                {% for stagiaire in form.stagiaires %}
+                    <li>
+                        {{ form_row(stagiaire) }}
+                    </li>
+                {% endfor %}
+
+            </ul>
+        {% endif %}
+    
+        {{form_row(form.submit) }} 
+    
+    {{ form_end(form) }} 
 {% endblock %}
 
 {% block javascripts %}
     {{ parent()}}
     <script src="/js/FormationHandlerModules.js"></script>
 
+    {# On ajoute les stagiaires uniquement en mode modif #}
     {% if editMode %}
         <script src="/js/FormationHandlerStagiaires.js"></script>
     {% endif %}
