--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
         <script src="https://kit.fontawesome.com/6277cc7eb0.js"></script>
 
         <title>{% block title %}{{ title }}{% endblock %}</title>
+
         {% block stylesheets %}
 
             {# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> #}
@@ -23,7 +24,6 @@
         {% if is_granted('ROLE_USER') or login is defined %}
             
             <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-                {# <a class="navbar-brand" href="#">Navbar</a> #}
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -31,19 +31,19 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Formations</a>
+                            <a class="nav-link" href="{{ path('showListeFormations') }}">Formations</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/show/listeModules">Catégories et modules</a>
+                            <a class="nav-link" href="{{ path('showListeModules') }}">Catégories et modules</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/show/listeFormateurs">Formateurs</a>
+                            <a class="nav-link" href="{{ path('showListeFormateurs') }}">Formateurs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/show/listeStagiaires">Stagiaires</a>
+                            <a class="nav-link" href="{{ path('showListeStagiaires') }}">Stagiaires</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/show/calendar">Planigramme</a>
+                            <a class="nav-link" href="{{ path('session_calendar') }}">Planigramme</a>
                         </li>
                         {% if is_granted('ROLE_USER') %}
                             <li class="nav-item">
@@ -52,7 +52,7 @@
                         {% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
-                                <a class="nav-link" href="/register">Ajouter quelqu'un</a>
+                                <a class="nav-link" href="{{ path('app_register') }}">Ajouter quelqu'un</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('user_get_all') }}">Utilisateurs</a>
@@ -79,7 +79,7 @@
         {% else %}
 
             <h1>Veuillez vous connecter<h1>
-            <p><a href="/login"><button type="button" class="btn btn-warning btn-lg">Connexion</button></a></p>
+            <p><a href="{{ path('app_login') }}"><button type="button" class="btn btn-warning btn-lg">Connexion</button></a></p>
 
         {% endif %}
     </body>
