--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,13 +4,18 @@
 
 {% block body %}
 
-    {{ form_start(registrationForm) }}
+    {% if is_granted('ROLE_ADMIN') %}
 
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword) }}
+        {{ form_start(registrationForm) }}
 
-        <button class="btn btn-warning btn-lg">Enregistrement</button>
+            {{ form_row(registrationForm.username) }}
+            {{ form_row(registrationForm.plainPassword) }}
 
-    {{ form_end(registrationForm) }}
+            <button class="btn btn-warning btn-lg">Enregistrement</button>
+
+        {{ form_end(registrationForm) }}
+    {% else %}
+        <h2>ACCES REFUSE<H2>
+    {% endif %}
     
 {% endblock %}
