--- a/templates/show/infoSession.html.twig
+++ b/templates/show/infoSession.html.twig
@@ -13,47 +13,27 @@
 		</thead>
 
 		<tbody>
-			{# {% if formation.modules %}
-				{% for module in formation.modules %}
-					{% if categorieM is not defined or categorieM != module.categorie %}	
-						<tr>
-							<td style="text-align: center"><strong>{{ module.categorie }}<strong></td> 
-							{% for formateur in module.categorie.formateurs %}
-								<td >{{ formateur }}</td> 
-							{% endfor %}
-						</tr>		
-					{% endif %}				
-						<tr>
-							<td>{{ module }}</td>
-							<td></td>
-						</tr>
-					{% set categorieM = module.categorie %}
-				{% endfor %}
-			{% endif %} #}
-
-			{% if formation.dureeModules %}
-				{% for dureeModule in formation.dureeModules %}
-					{% if categorieM is not defined or categorieM != dureeModule.module.categorie %}	
-						<tr>
-							<td style="text-align: center"><strong>{{ dureeModule.module.categorie }}<strong></td> 
-							{% for formateur in dureeModule.module.categorie.formateurs %}
-								<td >{{ formateur }}</td> 
-							{% endfor %}
-						</tr>		
-					{% endif %}				
-						<tr>
-							<td>{{ dureeModule.module ~ ' (' ~ dureeModule.duree ~ ' jours)' }}</td>
-							<td></td>
-						</tr>
-					{% set categorieM = dureeModule.module.categorie %}
-				{% endfor %}
-			{% endif %}
+			{% for dureeModule in formation.dureeModules %}
+				{% if categorieM is not defined or categorieM != dureeModule.module.categorie %}	
+					<tr>
+						<td style="text-align: center"><strong>{{ dureeModule.module.categorie }}<strong></td> 
+						{% for formateur in dureeModule.module.categorie.formateurs %}
+							<td >{{ formateur }}</td> 
+						{% endfor %}
+					</tr>		
+				{% endif %}				
+					<tr>
+						<td>{{ dureeModule.module ~ ' (' ~ dureeModule.duree ~ ' jours)' }}</td>
+						<td></td>
+					</tr>
+				{% set categorieM = dureeModule.module.categorie %}
+			{% endfor %}
 		</tbody>
 	</table>
 
 	<h2>Liste des stagiaires de la formation :</h2>
 
-	<table class="table table-striped">
+	<table class="table table-striped table-warning">
         <thead>
             <tr>
                 <th scope="col">Prénom</th>
@@ -76,6 +56,9 @@
             {% endfor %}
 
         </tbody>
-    </table>
+	</table>
+
+	<p><a href="{{ path('editFormation',{'id':formation.id}) }}"  ><button type="button" class="btn btn-warning btn-lg">Modifier la formation</button></a></p>
+	
 
 {% endblock %}
